@@ -31,7 +31,7 @@
 ###
 
 library_version=2.10.0~dev
-library_revision=20180807.7
+library_revision=20180807.8
 
 # set package distribution-specific architecture
 # USAGE: set_architecture $pkg
@@ -1563,6 +1563,7 @@ icons_get_from_path() {
 		for icon in $list; do
 			use_archive_specific_value "$icon"
 			file="$(get_value "$icon")"
+			[ -f "$directory/$file" ] || icon_file_not_found_error "$directory/$file"
 			wrestool_id="$(get_value "${icon}_ID")"
 			icon_extract_png_from_file "$directory/$file" "$destination"
 		done
@@ -1836,6 +1837,30 @@ icons_move_to() {
 }
 # compatibility alias
 move_icons_to() { icons_move_to "$@"; }
+
+# print an error message if an icon can not be found
+# USAGE: icon_file_not_found_error $file
+# CALLED BY: icons_get_from_path
+icon_file_not_found_error() {
+	local file
+	local string1
+	local string2
+	file="$1"
+	case "${LANG%_*}" in
+		('fr')
+			string1='Le fichier d’icône suivant est introuvable : %s'
+			string2='Merci de signaler cette erreur sur notre outil de gestion de bugs : %s'
+		;;
+		('en'|*)
+			string1='The following icon file could not be found: %s'
+			string2='Please report this issue in our bug tracker: %s'
+		;;
+	esac
+	print_error
+	printf "$string1\\n" "$1"
+	printf "$string2\\n" "$PLAYIT_GAMES_BUG_TRACKER_URL"
+	return 1
+}
 
 # print installation instructions
 # USAGE: print_instructions $pkg[…]
@@ -3495,6 +3520,10 @@ if [ "${0##*/}" != 'libplayit2.sh' ] && [ -z "$LIB_ONLY" ]; then
 		printf "$string2" "$target_version"
 		exit 1
 	fi
+
+	# Set URL for error messages
+
+	PLAYIT_GAMES_BUG_TRACKER_URL='https://framagit.org/vv221/play.it-games/issues'
 
 	# Set allowed values for common options
 
