@@ -25,6 +25,10 @@ if [ "${0##*/}" != 'libplayit2.sh' ] && [ -z "$LIB_ONLY" ]; then
 		exit 1
 	fi
 
+	# Set URL for error messages
+
+	PLAYIT_GAMES_BUG_TRACKER_URL='https://framagit.org/vv221/play.it-games/issues'
+
 	# Set allowed values for common options
 
 	ALLOWED_VALUES_ARCHITECTURE='all 32 64 auto'
